--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-node_modules
+/node_modules
 
 #dist folder
 dist
